# Tze0ntch

./: .gitignore  CMakeLists.txt  Makefile  README.md
doc/: Compiler type interpreter.md  Container element table.md  Customizable database controller.md  Data types and their description.md  Database cache.md  Database controller.md  Database management system.md  Database structure.md  Database.md  Draft.md  Home.md  Interpreting stages.md  Key-value database structure.md  Language syntax and lexeme constructions.md  Method table.md  Module database controller.md  Module database structure.md  Module table.md  Network module.md  Recursion parsing stage.md  Reflective (programming language).md  Semantic web database with indexing controller.md  Semantic web with indexing database structure.md  Standard databases.md  Struct table.md  System database controller.md  System database structure.md  System database.md  System ini file.md  Tables.md
include/: IniConfigure.h  main.h
include/DBMS/: DBMS.h
include/DBMS/DbControllers/: DbController.h
include/DBMS/DbControllers/Customizable/: CustomizableDbController.h
include/DBMS/DbControllers/KeyValue/: KeyValueDbController.h  Node.h  Vertex.h
include/DBMS/DbControllers/Module/: Module.h  ModuleDbController.h  Representing.h
include/DBMS/DbControllers/Relational/: Node.h  RelationalDbController.h  SemanticWeb.h  SubNode.h  Vertex.h
include/DBMS/DbControllers/SemanticWebWithIndexing/: Node.h  SemanticWeb.h  SemanticWebWithIndexingDbController.h  SubNode.h  Vertex.h
include/DBMS/DbControllers/System/: SystemDbController.h
include/Interpretator/: Interpretator.h
include/Interpretator/ExpressionAndVariables/: ElementaryVariables.h  ExpressionActions.h  Variable.h  VariableClasses.h
include/Interpretator/ExpressionAndVariables/ElementaryVariableTypes/: ElementaryVariable.h
include/Interpretator/ExpressionAndVariables/ElementaryVariableTypes/ComplexVariableTypes/: Array.h  String_t.h  Struct.h  Tree.h
include/Interpretator/ExpressionAndVariables/ElementaryVariableTypes/SimpleVariableTypes/: Any.h  Bool.h  Byte.h  Double.h  Int.h  Long.h  UByte.h  UInt.h  ULong.h  Void.h
include/Interpretator/ExpressionAndVariables/ElementaryVariableTypes/SpecificVariableTypes/: ArrayTemplate.h  GoToMethod.h  LinkToVariable.h  MethodVariable.h  NamedObject.h  NullObject.h  StackElement.h
include/Interpretator/ExpressionAndVariables/ExpressionTypes/: CastAction.h  ComparibleAction.h  CreateComplexVar.h  ExpressionAction.h  LogicalAction.h  LogicalNOT.h  LogicalTwoArgs.h  MathAction.h
include/Interpretator/InterpretatorStages/: Interpretator.h  InterpretingStage.h  InterpretorHeaders.h  RecursionParser.h  RecursionParsingStage.h
include/Interpretator/LineActions/: AssertAction.h  DefineAction.h  GoToMethodEmpty.h  LineAction.h  LineActionClasses.h  RemoveSpecificVariable.h  ReturnFromMethodAction.h  SkipRemoveMethLocalVariable.h
include/Interpretator/LineActions/GotoActions/: GotoAction.h  GotoActionWithIf.h
include/Interpretator/OperatorActions/: DefineAction.h  GoToMethodEmpty.h  LineActionClasses.h  RemoveSpecificVariable.h  ReturnFromMethodAction.h
include/Interpretator/OperatorActions/GotoActions/: GotoActionWithIf.h
include/Interpretator/OperatorArgumentTypes/: OnlyVariableClasses.h  Variable.h
include/Interpretator/OperatorArgumentTypes/OperationTypes/: ComparibleAction.h  GoToMethod.h  LogicalNOT.h
include/Interpretator/OperatorArgumentTypes/VariableTypes/: MethodVariable.h  NamedObject.h
include/Interpretator/OperatorArgumentTypes/VariableTypes/ComplexVariableTypes/: Array.h  String_t.h  Struct.h  Tree.h
include/Interpretator/OperatorArgumentTypes/VariableTypes/SimpleVariableTypes/: Bool.h  Byte.h  Long.h  UInt.h  ULong.h  Void.h
include/Interpretator/OperatorArgumentTypes/VariableTypes/SpecificVariableTypes/: Any.h  ArrayTemplate.h
include/Interpretator/Tables/: ClassTable.h  ContainerElementTable.h  ContainerTable.h  MethodTable.h  ModuleTable.h  NamedVariable.h  StructTable.h
include/NetworkInterface/: NetworkInterface.h
libruaries/EncodingConvertorActions/: EncodingConvertor.cpp  EncodingConvertor.h
src/: CommonTypeDef.h  IniConfigure.cpp  main.cpp
src/DBMS/: DBMS.cpp
src/DBMS/DBControllers/: DbController.cpp
src/DBMS/DBControllers/Customizable/: CustomizableDbController.cpp
src/DBMS/DBControllers/KeyValue/: KeyValueDbController.cpp  SemanticWeb.cpp  Vertex.cpp
src/DBMS/DBControllers/Module/: Module.cpp  ModuleDbController.cpp  Representing.cpp
src/DBMS/DBControllers/SemanticWeb/: Node.cpp
src/DBMS/DBControllers/SemanticWebWithIndexing/: Node.cpp  SemanticWeb.cpp  SemanticWebWithIndexingDbController.cpp  SubNode.cpp  Vertex.cpp
src/DBMS/DBControllers/System/: SystemDbController.cpp
src/DbController/: DbController.cpp  DbController.h
src/Interpretator/: Iis.cpp  Interpretator.cpp
src/Interpretator/InterpretatorStages/: GlobalIISMutex.h  Interpretator.cpp  InterpretingStage.cpp  RecursionParser.cpp  RecursionParsingStage.cpp
src/Interpretator/OperatorActions/: AssertAction.h  LineAction.h  SkipRemoveMethLocalVariable.h
src/Interpretator/OperatorActions/GotoActions/: GotoAction.h
src/Interpretator/OperatorArgumentTypes/: VariableClasses.h
src/Interpretator/OperatorArgumentTypes/OperationTypes/: CastAction.h  CreateComplexVar.h  LogicalAction.h  LogicalTwoArgs.h  MathAction.h
src/Interpretator/OperatorArgumentTypes/VariableTypes/: LinkToVariable.h
src/Interpretator/OperatorArgumentTypes/VariableTypes/SimpleVariableTypes/: Double.h  Int.h  UByte.h
src/Interpretator/OperatorArgumentTypes/VariableTypes/SpecificVariableTypes/: NullObject.h  StackElement.h
src/Interpretator/Tables/: ContainerElementTable.h  NamedVariable.h
src/NetInterface/: AcceptedClient.h
src/NetworkInterface/: NetworkInterface.cpp
src/SemanticWeb/: Node.cpp  Node.h  ReservedSemanticObjects.h  SemanticWeb.cpp  SemanticWeb.h  SubNode.h  Vertex.h
tests/: ISS Information programs Unit Tests.cpp
(+4 files in other folders)
